2002-04-27  Alan Modra  <amodra@bigpond.net.au>

	Merge from mainline.
	2002-04-23  H.J. Lu <hjl@gnu.org>
	* gas/hppa/parse/parse.exp: Don't expect failure on line separator
	test on hppa*-*-linux* nor hppa*-*-netbsd*.

	2002-03-19  Bo Thorsen  <bo@suse.de>
	* gas/i386/x86-64-opcode.d: More test cases for x86-64 opcodes.
	* gas/i386/x86-64-opcode.s: Likewise

	2002-02-24  Hans-Peter Nilsson  <hp@bitrange.com>
	* gas/mmix/bspec-1.d, gas/mmix/bspec-2.d, gas/mmix/comment-1.d:
	Adjust to changes in readelf output.

	2002-02-22  Bo Thorsen  <bo@suse.de>
	* i386.exp: Add x86-64-opcode (checks valid opcodes) and x86-64-inval
	(checks invalid opcodes) checks
	* x86-64-inval.l: New file.
	* x86-64-inval.s: New file.
	* x86-64-opcode.d: New file.
	* x86-64-opcode.s: New file.

2002-03-17  Hans-Peter Nilsson  <hp@bitrange.com>

	* gas/mmix/weak1.d, gas/mmix/weak1.d: New test.

2002-02-26  Chris Demetriou  <cgd@broadcom.com>

	* gas/mips/empic2.d: Adjust for the fact that relocations on
	symbols local to this file are resolved at assembly time into
	section-relative relocations, even if the symbols are extern.
	* gas/mips/empic2.s: Add file offset information, so the next
	person to do the math mentioned above has an easier time.
	* gas/mips/jal-empic-elf.d: New test.
	* gas/mips/jal-empic-elf-2.d, gas/mips/jal-empic-elf-2.s: New test.
	* gas/mips/jal-empic-elf-3.d, gas/mips/jal-empic-elf-3.s: New test.
	* gas/mips/mips.exp: Run the new tests.
	
2002-02-25  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* mips-gp64-fp32-pic.d: Fix test of 64bit register loads.
	* mips-gp64-fp32-pic.s: Likewise.
	* mips-gp64-fp32.d: Likewise.
	* mips-gp64-fp32.s: Likewise.
	* mips-gp64-fp64-pic.d: Likewise.
	* mips-gp64-fp64-pic.s: Likewise.
	* mips-gp64-fp64.d: Likewise.
	* mips-gp64-fp64.s: Likewise.

2002-02-18  Daniel Jacobowitz  <drow@mvista.com>

	* gas/sh/basic.exp: Don't run PIC tests for targets that don't
	support it.

2002-02-18  John David Anglin  <dave@hiauly1.hia.nrc.ca>
